--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,13 @@ html, body, #map {
   position: absolute;
   top: 12px; left: 12px;
   z-index: 5;
-  background: rgba(255,255,255,0.9);
+  background: rgba(93, 110, 155, 0.9);
   border-radius: 4px;
   padding: 6px 10px;
 }
 #infoPopup {
   position: absolute;
-  background: white;
+  background: rgb(79, 182, 93);
   padding: 8px;
   border-radius: 4px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.3);
